base/main-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      name: my-app
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app-container
        image: 578310434439.dkr.ecr.ap-northeast-2.amazonaws.com/cicd-test:main-8980298
        ports:
        - containerPort: 80
