base/buz-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-buz-service
spec:
  type: NodePort
  selector:
    app: my-buz
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
