base/commodity-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-commidity-service
spec:
  type: NodePort
  selector:
    app: my-commidity
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
