base/istio-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-home
spec:
  selector:
    app: my-app-home
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-home-v0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app-home
      version: v0
  template:
    metadata:
      labels:
        app: my-app-home
        version: v0
    spec:
      containers:
      - name: my-app-home
        image: 578310434439.dkr.ecr.ap-northeast-2.amazonaws.com/develop:main-3410cd3
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-home-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app-home
      version: v1
  template:
    metadata:
      labels:
        app: my-app-home
        version: v1
    spec:
      containers:
      - name: my-app-home
        image: 578310434439.dkr.ecr.ap-northeast-2.amazonaws.com/develop:main-76f93d0
        ports:
        - containerPort: 80
