base/login-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-login-service
spec:
  type: NodePort
  selector:
    app: my-login
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
