base/main-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  type: NodePort
  selector:
    app: my-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: my-app-service-preview
spec:
  type: NodePort
  selector:
    app: my-app-preview
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
