base/product-one-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-product-service
spec:
  type: NodePort
  selector:
    app: my-product
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
